--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ var rlArgs = {"script":"prettyphoto","selector":"lightbox","customEvents":"","ac
 		</div>
 	</div>
 
-<appian-action processModelUuid="0002dbec-7d51-8000-f92f-7f0000014e7a" />
+<appian-action processModelUuid="0002dbec-7d51-8000-f92f-7f0000014e7a" themeIdentifier="patient-registration"/>
 
 <script type='text/javascript'> jQuery(document).bind('gform_post_render', function(event, formId, currentPage){if(formId == 1) {if(!/(android)/i.test(navigator.userAgent)){jQuery('#input_1_3').mask('(999) 999-9999').bind('keypress', function(e){if(e.which == 13){jQuery(this).blur();} } );}} } );jQuery(document).bind('gform_post_conditional_logic', function(event, formId, fields, isInit){} );</script><script type='text/javascript'> jQuery(document).ready(function(){jQuery(document).trigger('gform_post_render', [1, 1]) } ); </script>
 <div class="vcex-spacing" style="height:30px"></div>
